src/app/home/home.component.scss
@import "../../styles.css";

.title {
  display: flex;
  justify-content: flex-end;
  width: 100%;
  align-items: center;
  font-size: 1.5rem;
  margin-bottom: 70px;
  color: var(--sup-text);
  span {
    color: var(--sec);
    margin: 0 10px 0 5px;
    font-weight: 600;
    font-size: 1.25rem;
  }
  &::before {
    content: "";
    height: 1px;
    width: 15rem;
    background-color: var(--sup-text);
  }
}

.layout {
  display: flex;
  width: 100%;

  nav {
    border-right: 2px solid var(--sec);
    padding: 20px;
    position: fixed;
    left: 0;
    z-index: 1;
    display: flex;
    top: 0;
    align-items: stretch;
    height: 100vh;
    ul {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      li {
        padding: 20px 0px 20px 0px;
        list-style-type: none;
        writing-mode: vertical-rl;

        span {
          color: var(--sec);
          margin-bottom: 10px;
        }

        &:hover {
          font-weight: 600;
          color: var(--sup-text);
        }
      }
    }
  }

  .body {
    margin: 0 370px 0 370px;
    width: 100%;

    .logo {
      font-family: var(--aladin);
      color: var(--sec);
      text-align: center;
      padding-top: 2rem;
      font-size: 3rem;
    }

    .intro {
      align-items: center;
      display: flex;
      justify-content: space-between;
      padding-bottom: 10rem;
      margin: 0 5rem 0 5rem;
      height: 100vh;
      .name {
        p {
          color: var(--sec);
          margin-bottom: 2.875rem;
        }
        h1 {
          font-size: 4.5rem;
          color: var(--sup-text);
          width: 20rem;
        }
        h2 {
          font-size: 3rem;
          margin-top: 1.125rem;
          // white-space: nowrap;
          margin-bottom: 2.875rem;
          color: var(--prof-text);
        }
        button {
          padding: 0.6875rem 1.6875rem;
          border: 2px solid var(--sec);
          color: var(--sec);
          border-radius: 5px;
          cursor: pointer;
          &:hover {
            background: var(--sec-tint);
          }
        }
      }
      .about {
        max-width: 31.25rem;
        font-size: 1.25rem;
        line-height: 3rem;
        letter-spacing: 0.095em;
        span {
          color: var(--sec);
        }
      }
    }

    .about-me {
      width: 100%;
      margin-bottom: 130px;
      display: flex;
      .text {
        max-width: 500px;
        line-height: 32px;

        .p1,
        .p2 {
          margin-bottom: 20px;
          i {
            color: var(--sec);
          }
        }

        .tech {
          ul {
            display: grid;
            grid-template-columns: repeat(2, minmax(140px, 200px));
            gap: 0px 10px;
            padding: 0px;
            margin: 20px 0px 0px;
            overflow: hidden;
            list-style: none;
            li {
              margin-bottom: 10px;
              &::before {
                content: "▹";
                color: var(--sec);
              }
            }
          }
        }
      }
      .image {
        margin-left: 20px;
        height: 380px;
        width: 350px;
        &::after {
          content: "";
          display: flex;
          position: relative;
          bottom: 50%;
          left: 5%;
          bottom: 96%;
          width: 100%;
          height: 100%;
          border: 4px solid var(--sec);
          border-radius: 6px;
        }
        img {
          border-radius: 6px;
          height: 100%;
          width: 100%;
          object-fit: cover;
        }
      }
    }

    .exp-title {
      @extend .title;
      flex-direction: row-reverse;
      margin-bottom: 3.5rem;
      &::before {
        margin-left: 5px;
      }
    }
    .experience {
      display: flex;
      margin-bottom: 100px;
      width: 100%;
      ul {
        max-width: max-content;
        padding: 0;
        list-style-type: none;
        margin-right: 20px;

        li {
          display: flex;
          max-width: 100%;
          justify-content: left;
          align-items: center;
          padding: 20px;
          border-left: 2px solid var(--sup-text);
          font-size: 16px;
        }

        .activeTile {
          border-left: 2px solid var(--sec);
          background-color: var(--experience-higlight);
          color: var(--sec);
        }
      }

      .content {
        min-height: 100%;
        .value {
          max-width: 600px;

          h2 {
            font-size: 1.5rem;
            font-weight: 500;
            margin-bottom: 5px;
            .colored-text {
              color: var(--sec);
            }
            .firm {
              color: var(--sec);
              &::before {
                content: "@ ";
              }
            }
          }

          ul {
            margin-top: 20px;
            li {
              border: none;
              padding: 0;
              line-height: 27px;
              display: flex;
              align-items: baseline;
              margin-bottom: 18px;
              &::before {
                content: "▹";
                color: var(--sec);
              }
            }
          }
        }
      }
    }
  }
}

